--- a/package.json
+++ b/package.json
@@ -83,14 +83,14 @@
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.9",
     "prettier": "^1.8.2",
-    "react": "^16.1.1",
+    "react": "^18.0.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dnd-test-backend": "^2.5.4",
     "react-dnd-touch-backend": "^0.3.17",
-    "react-dom": "^16.1.1",
+    "react-dom": "^18.0.0",
     "react-hot-loader": "^3.1.3",
-    "react-sortable-tree": "^1.5.2",
-    "react-test-renderer": "^16.1.1",
+    "@nosferatu500/react-sortable-tree": "^4.2.0",
+    "react-test-renderer": "^18.0.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
